Fix the snow toggle on mobile (#8786)
Closes https://github.com/hackclub/hcb/issues/8784

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -495,3 +495,9 @@ summary {
 .iti {
   width: 100%;
 }
+
+@media (max-width: 56em) {
+  .snow_toggle {
+    bottom: 64px !important;
+  }
+}
